test/langtools/tools/javac/valhalla/lworld-values/DemoteToValueBasedTest.out
DemoteToValueBasedTest.java:10:15: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.null, Point)
1 error
